<!--
  ~    Copyright [2019] [chengjie.jlu@qq.com]
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">ZhiHu</string>
    <string name="search_in_zhihu">Search in ZhiHu</string>
    <string name="tab_home">Home</string>
    <string name="tab_idea">Idea</string>
    <string name="tab_edit">Edit</string>
    <string name="tab_msg">Msg</string>
    <string name="tab_my">My</string>

    <string name="tab_top_follow">Follow</string>
    <string name="tab_top_recommend">Recommend</string>
    <string name="tab_top_billboard">Billboard</string>
    <string name="tab_top_article">Article</string>

    <string name="list_footer_load_more">Loading…… please wait</string>
    <string name="list_footer_no_more">There is no more content</string>

    <string name="hint_input_content">Input Something……</string>
    <string name="text_view_submit">Submit</string>
    <string name="text_view_markdown_preview">Preview</string>

    <string name="editor_title_level_one">First-Level Title</string>
    <string name="editor_title_level_two">Second-Level Title</string>
    <string name="editor_title_level_three">Third-Level Title</string>
    <string name="editor_title_level_four">Fourth-Level Title</string>
    <string name="editor_title_level_five">Fifth-Level Title</string>
    <string name="editor_title_level_six">Sixth-Level Title</string>

    <string name="editor_code_single_line">Single Line Code</string>
    <string name="editor_code_block">Code Block</string>

    <string name="editor_text_style_bold">Bold</string>
    <string name="editor_text_style_italic">Italic</string>
    <string name="editor_text_style_quote">Quote</string>

    <string name="editor_list_style_order">Order List</string>
    <string name="editor_list_style_disorder">Disorder List</string>

    <string name="dialog_insert_image_title">Insert an image</string>
    <string name="dialog_insert_link_title">Insert an link</string>

    <string name="dialog_insert_link_address_hint">Input link address</string>
    <string name="dialog_insert_link_description_hint">Insert link description.(optional)</string>

    <string name="dialog_insert_image_address_hint">Input image address</string>
    <string name="dialog_insert_image_description_hint">Insert image description.(optional)</string>

    <string name="list_head_discover_more">Discover more interested people</string>
</resources>
