<?xml version="1.0" encoding="utf-8"?>

<!--
  ~    Copyright [2019] [chengjie.jlu@qq.com]
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/h1"
        android:title="@string/editor_title_level_one" />

    <item
        android:id="@+id/h2"
        android:title="@string/editor_title_level_two" />
    <item
        android:id="@+id/h3"
        android:title="@string/editor_title_level_three" />

    <item
        android:id="@+id/h4"
        android:title="@string/editor_title_level_four" />
    <item
        android:id="@+id/h5"
        android:title="@string/editor_title_level_five" />

    <item
        android:id="@+id/h6"
        android:title="@string/editor_title_level_six" />
</menu>